  keystore {pull}6098[6098]
- De dot keys of labels and annotations in kubernetes meta processors to prevent collisions. {pull}6203[6203]
- The default value for pipelining is reduced to 2 to avoid high memory in the Logstash beats input. {pull}6250[6250]
- Add logging when monitoring cannot connect to Elasticsearch. {pull}6365[6365]

*Auditbeat*

- Changed `audit.file.path` to be a multi-field so that path is searchable. {pull}5625[5625]
- Split the audit.kernel and audit.file metricsets into their own modules
  named auditd and file_integrity, respectively. This change requires
  existing users to update their config. {issue}5422[5422]
- Renamed file_integrity module fields. {issue}5423[5423] {pull}5995[5995]
- Renamed auditd module fields. {issue}5423[5423] {pull}6080[6080]

*Filebeat*
- Switch to docker prospector in sample manifests for Kubernetes deployment {pull}5963[5963]
- Renaming of the prospector type to the input type and all prospectors are now moved to the input
  folder, to maintain backward compatibility type aliasing was used to map the old type to the new
  one. This change also affect YAML configuration. {pull}6078[6078]
- Refactor the Redis prospector to use the input interface {pull}6116[6116]
- Refactor the UDP prospector to use the input interface {pull}6118[6118]
- Refactor the Docker prospector to use the input interface {pull}6278[6278]
- Refactor the Log prospector to use the input interface {pull}6116[6116]
- Refactor the Stdin prospector to use the input interface {pull}6116[6116]
- Refactor the usage of prospector to input in the YAML reference and
  the system test. {pull}6121[6121]
- Add IIS module to parse access log and error log. {pull}6127[6127]

*Heartbeat*

- Made the url field of heartbeat aggregatable. {pull}6263[6263]

*Metricbeat*

- Rename `heap_init` field to `heap.init`. {pull}5320[5320]
- Rename `http.response.status_code` field to `http.response.code`. {pull}5521[5521]